fix: make extended pattern terminal Java 8 compatible